--- a/Academics.html
+++ b/Academics.html
@@ -121,13 +121,13 @@
                     <div class="hod_text">
                         <p class="parra1">Received his Bachelor of Engineering in Electronics Engineering from Amravati University, India in 1990 and Masters in Engineering degree from MNREC (NIT) Allahabad, India in 1996. He received Ph.D. in Electronics Technology from Guru Nanak Dev Univ., Amritsar, India in year 2000. Along with this he also did DBM and MMS from North Maharashtra University in 1993 and 1994 respectively.
                             <br><br>
-                            He is having enriched teaching experience of 27 years and 5 years in industry. He has published 174 research papers in various international and national referred journals and conferences. He has filed 7 patents, five copy rights and published two books. He is recognized Ph.D. guide from University of Pune. Under his able guidance 10 students completed Ph.D. in engineering field. His area of Interest includes Wireless Communication, Wireless Sensor Network, Nonconventional energy and Signal processing.
+                            He is having enriched teaching experience of 29 years and 5 years in industry. He has published 176 research papers in various international and national referred journals and conferences. He has filed 7 patents, 4 copy rights and published two books. He is recognized Ph.D. guide from University of Pune. Under his able guidance 11 students completed Ph.D. in engineering field. His area of Interest includes Wireless Communication, Wireless Sensor Network, Nonconventional energy and Signal processing.
                             <br>
                             <br>
                             He has participated in many Seminars and Conferences and delivered keynote address and chaired sessions. He is reviewed research manuscripts for refereed international journals.
                             <br>
                             <br>
-                            He is holding the post of Principal at AIT since Feb 2015. Under his tenure AIT is reaccredited 3rd time NBA and NAAC with ‘A’ Grade, received best professional college award from Univ of Pune in 2017. He was instrumental in starting PG course in Mechanical Engineering and increase in intake of UG Computer and E&TC.
+                            He is holding the post of Principal at AIT since Feb 2015. Under his tenure AIT is reaccredited 4th time NBA and NAAC with ‘A’ Grade, received best professional college award from Univ of Pune in 2017. He was instrumental in starting PG course in Mechanical Engineering and increase in intake of UG Computer and E&TC.
                             <br>
                             <br>
                             He is Sr Member, IEEE, fellow of Institution of Engineers, IETE and life member of ISTE and Instrument Society of India.
@@ -140,7 +140,7 @@
                         <br>
                         <div id="message_by">Message</div>
                         <br>
-                        <p class="parra1">AIT was established in 1994 and within a short span of 29 years since inception as compared to some old institutes like COEP, it has established itself as a prestigious engineering institution under Savitribai Phule Pune University (formerly University of Pune). Our students have consistently shown very good performance and have obtained excellent placements. All departments of AIT obtained reaccreditation from the National Board of Accreditation (NBA) for three years. This has been possible due to the excellent co-ordination and support of the staff, management, administration, students and their parents. AIT is also getting top ranking in NIRF, Outlook, Data Quest, THE WEEK and similar agencies.
+                        <p class="parra1">AIT was established in 1994 and within a short span of 30 years since inception as compared to some old institutes like COEP, it has established itself as a prestigious engineering institution under Savitribai Phule Pune University (formerly University of Pune). Our students have consistently shown very good performance and have obtained excellent placements. All departments of AIT obtained reaccreditation from the National Board of Accreditation (NBA) for three years. This has been possible due to the excellent co-ordination and support of the staff, management, administration, students and their parents. AIT is also getting top ranking in NIRF, Outlook, Data Quest, THE WEEK and similar agencies.
 
                             <br>
                             <br>
