some mistake solved

--- a/IIC_about.html
+++ b/IIC_about.html
@@ -66,7 +66,7 @@
     <div class="header3">
             <div class="show">
                 <p class="a">IIC</p>
-                <p class="b"> ""Fostering creativity, igniting innovation, shaping the future."" </p>
+                <p class="b"> "Fostering creativity, igniting innovation, shaping the future." </p>
                 <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
         </div>
