ASGE changes done

--- a/Departments/ASGE/ASGE_NOTICES.html
+++ b/Departments/ASGE/ASGE_NOTICES.html
@@ -114,7 +114,7 @@
             <div class="date">16 Oct 2023</div>
             <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
         </div>
-        <div class="notice_lists">
+        <!-- <div class="notice_lists">
             <div class="date">16 Oct 2023</div>
             <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
         </div>
@@ -133,7 +133,7 @@
         <div class="notice_lists">
             <div class="date">16 Oct 2023</div>
             <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-        </div>
+        </div> -->
         </div>
     </section>
 </div>
