--- a/Departments/ASGE/ASGE_RESULT.html
+++ b/Departments/ASGE/ASGE_RESULT.html
@@ -135,7 +135,7 @@
                             <p>9.43 CGPA</p>
                         </div>
                         <div class="result_branch">
-                            <p>Second</p>
+                            <p>First</p>
                         </div>
                     </div>
 
@@ -148,10 +148,24 @@
                             <p>9.30 CGPA</p>
                         </div>
                         <div class="result_branch">
-                            <p>Third</p>
+                            <p>Second</p>
                         </div>
                     </div>
 
+                </div>
+                <div class="result_final">
+                    <div class="result_asge_card">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9" height="100px" width="100px"></img>
+                        <div class="result_name">
+                            <a href="" class="prior">Anurag Singh</a>
+                        </div>
+                        <div class="result_student">
+                            <p>9.16 CGPA</p>
+                        </div>
+                        <div class="result_branch">
+                            <p>Third</p>
+                        </div>
+                    </div>
                 </div>
                
             </div>
