--- a/Departments/ASGE/ASGE_TIMETABLE.html
+++ b/Departments/ASGE/ASGE_TIMETABLE.html
@@ -113,6 +113,10 @@
             <div id="timetable">
                 <h1>Timetable</h1>
                 <div class="exam_links1">
+                    <div class="exam_links_two">
+                        <img src="vector 3.png" alt="">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-TIMETABLE%2Ftime%20table%202023-24%20sem%202.pdf?alt=media&token=9aa8f96d-7ad1-43b5-acaf-7db036b35501" class="prior" id="link_exam" target="_blank">FE Timetable Sem II 2023-24</a>
+                    </div>
                     <div class="exam_links_one">
                         <img src="vector 3.png" alt="">
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-TIMETABLE%2FFE%20time%20table%20SEM%20I%202023-24.pdf?alt=media&token=eff08d38-02d8-48d1-8da2-52072d533013" class="prior" id="link_exam" target="_blank"> FE time table SEM I 2023-24</a>
