--- a/Departments/ASGE/ASGE_RESEARCH.html
+++ b/Departments/ASGE/ASGE_RESEARCH.html
@@ -126,19 +126,27 @@
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication%202021-22.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publications%202020-21.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/2019-20%20ASGE.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/2018-19%20ASGE.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                    </div>
+                    <br>
+                    <div class="item">
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/2017-18%20ASGE.pdf" class="prior" id="research_year" target="_blank">2017-18</a>
+                    </div>
+                    <br>
+                    <div class="item">
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/2016-17%20ASGE.pdf" class="prior" id="research_year" target="_blank">2016-17</a>
                     </div>
                 </div>
                 <div class="pub">
@@ -147,24 +155,17 @@
                     </h3>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Patents/Patent%202021-22.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Patents/Patent%202020-21.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Patents/Patent%202019-20.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
-                    </div>
+
                 </div>
             </div>
             
