club and it e magazine
nss data rectify and it e magazine error rectified

--- a/CLUBS.html
+++ b/CLUBS.html
@@ -864,7 +864,7 @@
                     </div>
                     <br>
                     <div class="club_content_head">
-                     <p class="club_head_name">SM Gaikwad</p>
+                     <p class="club_head_name">Dr. SM Gaikwad</p>
                      <p class="club_post">Staff in Charge</p>
                     </div>
                     <br>
