--- a/Departments/IT/IT_MAGAZINE.html
+++ b/Departments/IT/IT_MAGAZINE.html
@@ -114,58 +114,58 @@
                 <div class="exam_links1">
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2FIT%20Technical%20E-Magazine22-23.pdf?alt=media&token=8fa40e48-ce66-4caf-bc99-f643dd651c46" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2022-23</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2FIT%20Technical%20E-Magazine22-23.pdf?alt=media&token=8fa40e48-ce66-4caf-bc99-f643dd651c46" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2022-23</a>
                     </div>
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2FIT%20Technical%20E-Magazine21-22.pdf?alt=media&token=88735e09-3d29-4303-bbb1-12927916ed26" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2021-22</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2FIT%20Technical%20E-Magazine21-22.pdf?alt=media&token=88735e09-3d29-4303-bbb1-12927916ed26" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2021-22</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2FIT%20Technical%20E-Magazine20-21.pdf?alt=media&token=3d6e529b-d3dc-4f31-8c63-fc499499d0d8" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2020-21</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2FIT%20Technical%20E-Magazine20-21.pdf?alt=media&token=3d6e529b-d3dc-4f31-8c63-fc499499d0d8" class="prior" id="link_exam" target="_blank">Technical E-Magazine 2020-21</a>
                     </div>
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2022-2023_SEM%20II.pdf?alt=media&token=ab65baba-40f6-4d95-821a-edbe9aefc31a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2022-23 Sem-II</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2022-2023_SEM%20II.pdf?alt=media&token=ab65baba-40f6-4d95-821a-edbe9aefc31a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2022-23 Sem-II</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2022-2023_SEM%20I.pdf?alt=media&token=791065c3-83c9-433f-963b-b18fb098703a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2022-23 Sem-I</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2022-2023_SEM%20I.pdf?alt=media&token=791065c3-83c9-433f-963b-b18fb098703a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2022-23 Sem-I</a>
                     </div>
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2021-2022_SEM%20II.pdf?alt=media&token=f21736fd-e20b-4cb4-b6bf-97bc6eb8ba8a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2021-22 Sem-II</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2021-2022_SEM%20II.pdf?alt=media&token=f21736fd-e20b-4cb4-b6bf-97bc6eb8ba8a" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2021-22 Sem-II</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2021-2022_SEM%20I.pdf?alt=media&token=f8e0d3a2-5853-4fda-a70a-4e20f236fa68" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2021-22 Sem-I</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2021-2022_SEM%20I.pdf?alt=media&token=f8e0d3a2-5853-4fda-a70a-4e20f236fa68" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2021-22 Sem-I</a>
                     </div>
 
 
 
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2020-2021_SEM%20II.pdf?alt=media&token=f22791d1-783b-4554-9669-1bb5b483e305" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2020-21 Sem-II</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2020-2021_SEM%20II.pdf?alt=media&token=f22791d1-783b-4554-9669-1bb5b483e305" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2020-21 Sem-II</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2020-2021_SEM%20I.pdf?alt=media&token=f955f14f-0b8c-4f15-9d8a-c1705bd95200" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2020-21 Sem-I</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2020-2021_SEM%20I.pdf?alt=media&token=f955f14f-0b8c-4f15-9d8a-c1705bd95200" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2020-21 Sem-I</a>
                     </div>
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2019-2020_SEM%20II.pdf?alt=media&token=de0faf31-f0b9-4aa1-beac-246928cc60af" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2019-20 Sem-II</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2019-2020_SEM%20II.pdf?alt=media&token=de0faf31-f0b9-4aa1-beac-246928cc60af" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2019-20 Sem-II</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2019-2020_SEM%20I.pdf?alt=media&token=f5b1804c-8aba-4b59-b5b2-1f0175acf9dc" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2019-20 Sem-I</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2019-2020_SEM%20I.pdf?alt=media&token=f5b1804c-8aba-4b59-b5b2-1f0175acf9dc" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2019-20 Sem-I</a>
                     </div>
                     <div class="exam_links_two" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2018-2019_SEM%20II.pdf?alt=media&token=dfa12db2-9032-4564-88d2-55450d967ebe" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2018-19 Sem-II</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2018-2019_SEM%20II.pdf?alt=media&token=dfa12db2-9032-4564-88d2-55450d967ebe" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2018-19 Sem-II</a>
                     </div>
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMagazine%2F2018-2019_SEM%20I.pdf?alt=media&token=15849f09-a68d-4c1f-a876-bde2aa20bebb" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2018-19 Sem-I</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-EMAGZINE%2F2018-2019_SEM%20I.pdf?alt=media&token=15849f09-a68d-4c1f-a876-bde2aa20bebb" class="prior" id="link_exam" target="_blank">Activity E-Magazine 2018-19 Sem-I</a>
                     </div>
                     
                 </div>
