--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -65,7 +65,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Electronics & Communication</p>
+                <p class="a">Electronics & Telecommunication</p>
                 <p class="b"> "Currents of Creativity, Waves of Connectivity: Explore the Future with Us." </p>
                 <p class="c"> <a href="#main">Explore</a> </p>
             </div>
