--- a/Departments/COMP/COMP_ACTIVITIES.html
+++ b/Departments/COMP/COMP_ACTIVITIES.html
@@ -140,15 +140,15 @@
                     </h4>
                     <div class="item">
                         <img src="vector 2.png" >
-                            <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2FFaculty%20Devlopment%20Program%20for%202022-23.pdf?alt=media&token=665967fa-1ded-4f61-bece-a8aee2451325" class="prior" id="research_year" target="_blank">2022-23</a>
+                            <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2F2022-23.pdf?alt=media&token=f2db81e5-e405-477e-a177-aa4b0e827328" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2FFaculty%20Devlopment%20Program%20for%202021-22.pdf?alt=media&token=594c079b-49cf-4909-b9a8-4a4bb326bb81" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2F2021-22.pdf?alt=media&token=5d2c019d-b1f9-40bf-8c73-cd0943cb9e57" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2FFaculty%20Achievents%20%202020-21.pdf?alt=media&token=5548c089-b00f-40da-91fe-ac9bd6269401" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-ACTIVITIES%2F2020-21.pdf?alt=media&token=58a049fc-8f76-480d-bf9e-cba5ef860f03" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     
                     
