--- a/AICTE.html
+++ b/AICTE.html
@@ -41,6 +41,7 @@
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
             <a href="ABOUT_US.html">About Us</a>
+            <a href="Academics.html">Academics</a>
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
