--- a/NIRF.html
+++ b/NIRF.html
@@ -64,7 +64,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a" id="overflow_name">National Institute Ranling Framework </p>
+                <p class="a" id="overflow_name">National Institute Ranking Framework </p>
                 <p class="b"> "Discover excellence at its peak – where education meets distinction" </p>
                 <p class="c"> <a href="#hod_content">Explore</a> </p>
             </div>
